--- a/src/scss/layout.scss
+++ b/src/scss/layout.scss
@@ -31,6 +31,7 @@
 @import '_partials/notifications';
 @import '_partials/daily-messages';
 @import '_partials/social-wheels';
+@import '_partials/questions_banner';
 
 * {
 	-webkit-tap-highlight-color: rgba(0, 0, 0, 0); /* make transparent link selection, adjust last value opacity 0 to 1.0 */
