QS-1001: Fix about me in own profile page

--- a/src/scss/pages/user.scss
+++ b/src/scss/pages/user.scss
@@ -32,8 +32,9 @@ body #root .App .view .page.user-page {
           margin-top: 1.5ex;
           width: 100%;
           margin-bottom: 3ex;
-          .seeMore {
+          .see-more {
             color: $deep-purple;
+            cursor: pointer;
           }
         }
         .profile-about-me-name {
