--- a/src/scss/_partials/_questions_banner.scss
+++ b/src/scss/_partials/_questions_banner.scss
@@ -1,45 +1,46 @@
-.answer-questions-link-container {
-  background-color: $deep-purple;
-  left: 0;
-  max-width: 480px;
-  padding: 10px 5%;
-  position: absolute;
-  right: 0;
-  text-align: center;
+body #root .App .view {
+  .answer-questions-link-container {
+    background-color: $deep-purple;
+    left: 0;
+    max-width: 480px;
+    padding: 10px 5%;
+    position: absolute;
+    right: 0;
+    text-align: center;
 
-  a {
-    color: white;
+    a {
+      color: white;
 
-    .answer-questions-link-title {
-      font-size: 1.428571429em;
-      font-weight: bold;
-      height: 55px;
-    }
-
-    .answer-questions-link-stats {
-      font-size: 0.857142857em;
-      margin-top: 10px;
-
-      p {
-        margin: 0;
+      .answer-questions-link-title {
+        font-size: 1.428571429em;
+        font-weight: bold;
+        height: 55px;
       }
-    }
-    .answer-questions-link-picture {
-      float: right;
-      max-height: 45px;
-      margin-bottom: -90px;
-      margin-top: -35px;
-      overflow: hidden;
-      width: 90px;
-      -webkit-backface-visibility: hidden;
 
-      img {
-        border-radius: 50%;
-        -moz-border-radius: 50%;
-        -webkit-border-radius: 50%;
+      .answer-questions-link-stats {
+        font-size: 0.857142857em;
+        margin-top: 10px;
+
+        p {
+          margin: 0;
+        }
+      }
+      .answer-questions-link-picture {
+        float: right;
+        max-height: 45px;
+        margin-bottom: -90px;
+        margin-top: -35px;
+        overflow: hidden;
         width: 90px;
-      }
+        -webkit-backface-visibility: hidden;
 
+        img {
+          border-radius: 50%;
+          -moz-border-radius: 50%;
+          -webkit-border-radius: 50%;
+          width: 90px;
+        }
+      }
     }
   }
 }
