--- a/src/scss/pages/user.scss
+++ b/src/scss/pages/user.scss
@@ -12,6 +12,7 @@ body #root .App .view .page.user-page {
 
       .profile-data, .profile-about-me {
         display: table;
+        padding: 5px;
         width: 100%;
 
         span {
@@ -26,7 +27,8 @@ body #root .App .view .page.user-page {
         .profile-data-name {
           font-weight: bold;
           float: left;
-          width: 50%;
+          margin-right: 5%;
+          width: 45%;
         }
         .profile-about-me-value {
           margin-top: 1.5ex;
