QS-1001: Remove yellow input background in Chrome (second try)

--- a/src/scss/layout.scss
+++ b/src/scss/layout.scss
@@ -57,14 +57,17 @@ body {
 	}
 	input {
 		&:-webkit-autofill {
+			background-color: $dark-blue !important;
 			-webkit-box-shadow: 0 0 0 1000px $dark-blue inset;
 			-webkit-text-fill-color: white !important;
 		}
 		&:-webkit-autofill:focus {
+			background-color: $dark-blue !important;
 			-webkit-box-shadow: 0 0 0 1000px $dark-blue inset;
 			-webkit-text-fill-color: white !important;
 		}
 		&:-webkit-autofill:hover {
+			background-color: $dark-blue !important;
 			-webkit-box-shadow: 0 0 0 1000px $dark-blue inset;
 			-webkit-text-fill-color: white !important;
 		}
