QS-1001: Fix styles for small screens

--- a/src/scss/_partials/_navbar.scss
+++ b/src/scss/_partials/_navbar.scss
@@ -3,6 +3,13 @@
 	position: fixed !important;
 }
 
+@media only screen and (max-width: 300px) {
+	.navbar {
+		width: 90%;
+	}
+}
+
+
 .navbar, .subnavbar, .toolbar {
 	background-color: $dark-purple;
 	color: #fff;
