QS-1001: Fix more styles for small screens

--- a/src/scss/pages/answer-question.scss
+++ b/src/scss/pages/answer-question.scss
@@ -104,3 +104,9 @@ body #root .App .view .page {
     }
   }
 }
+
+@media only screen and (max-width: 300px) {
+  body #root .App .view .page.answer-question-page {
+    width: 90%;
+  }
+}
