--- a/src/scss/pages/register-join.scss
+++ b/src/scss/pages/register-join.scss
@@ -25,3 +25,11 @@ body #root .App .view .page #page-content.register-join-content {
     }
   }
 }
+
+
+@media only screen and (max-width: 300px) {
+  body #root .App .view .page #page-content.register-join-content {
+    margin-left: -10px;
+    width: 95%;
+  }
+}
