--- a/src/scss/layout.scss
+++ b/src/scss/layout.scss
@@ -32,6 +32,7 @@
 @import '_partials/daily-messages';
 @import '_partials/social-wheels';
 @import '_partials/questions_banner';
+@import '_partials/guest-banner';
 
 * {
 	-webkit-tap-highlight-color: rgba(0, 0, 0, 0); /* make transparent link selection, adjust last value opacity 0 to 1.0 */
