--- a/src/scss/_partials/_guest-banner.scss
+++ b/src/scss/_partials/_guest-banner.scss
@@ -1,8 +1,8 @@
 .guest-banner {
 	position: fixed;
 	width:100%;
-	height: 5%;
-	bottom: 0px;
+	height: 20px;
+	bottom: 0;
 	z-index:10000;
 	background-color: purple;
 	color: #fff;
