--- a/src/scss/_partials/_toolbar.scss
+++ b/src/scss/_partials/_toolbar.scss
@@ -1,8 +1,17 @@
 .toolbar {
 	background: none;
-	overflow-y: scroll;
 	position: fixed !important;
 	padding: 30px 0;
+
+	.arrow-up {
+		border-left: 5px solid transparent;
+		border-right: 5px solid transparent;
+		border-bottom: 5px solid $deep-purple;
+		bottom: 60px;
+		height: 0;
+		position: fixed;
+		width: 0;
+	}
 
 	.toolbar-inner {
 		background-color: $deep-purple;
@@ -11,11 +20,16 @@
 		margin: -30px auto 40px auto;
 		max-width: 480px;
 		min-width: 320px;
-		padding: 0 40px;
+		padding: 0;
 		position: relative;
 
-		a {
-			color: #fff;
+		.toolbar-link-wrapper {
+			text-align: center;
+			width: 30%;
+
+			a {
+				color: #fff;
+			}
 		}
 	}
 
@@ -25,5 +39,9 @@
 }
 
 .toolbar-guest {
-	bottom: 5%;
+	bottom: 20px;
+
+	.arrow-up {
+		bottom: 80px;
+	}
 }
