QS-1001: Show "no interests" message when looking at a profile's interests

--- a/src/scss/pages/interests.scss
+++ b/src/scss/pages/interests.scss
@@ -13,5 +13,9 @@ body #root .App .view .page.interests-page  {
     .content-carousel .swiper-slide {
       width: 275px;
     }
+    .contents-empty {
+      text-align: center;
+      margin-top: 30%;
+    }
   }
 }
