--- a/src/scss/pages/other-interests.scss
+++ b/src/scss/pages/other-interests.scss
@@ -34,5 +34,9 @@ body #root .App .view .page.other-interests-page  {
     .content-carousel .swiper-slide {
       width: 275px;
     }
+    .contents-empty {
+      text-align: center;
+      margin-top: 30%;
+    }
   }
 }
