QS-1001: Add register and enter as guest links to login page

--- a/src/scss/pages/home.scss
+++ b/src/scss/pages/home.scss
@@ -88,13 +88,8 @@ body #root .App .view.home-view {
       width: 80%;
     }
 
-    .register {
-
-      color: white;
-
-      a {
-        color: $deep-purple;
-      }
+    .register-text {
+      margin-bottom: 10px;
     }
   }
 }
