--- a/src/scss/pages/login.scss
+++ b/src/scss/pages/login.scss
@@ -5,6 +5,13 @@ body #root .App .view .page #page-content.login-content {
     text-align: center;
     margin-bottom: 20px;
   }
+  .button {
+    margin-bottom: 10px;
+  }
+  .register-text {
+    margin-bottom: 10px;
+    text-align: center;
+  }
 }
 
 @media only screen and (max-width: 300px) {
