QS-1001: Remove question from answer question page once answered or skipped

--- a/src/scss/layout.scss
+++ b/src/scss/layout.scss
@@ -172,6 +172,12 @@ body {
 					margin: -25px auto auto auto;
 					width: 100px;
 				}
+
+				.empty-message {
+					font-size: 1.8em;
+					margin-top: 120px;
+					text-align: center;
+				}
 			}
 		}
 	}
