QS-1001: Fix show youtube icon background, and use youtube color

--- a/src/scss/_partials/_social-wheels.scss
+++ b/src/scss/_partials/_social-wheels.scss
@@ -79,10 +79,10 @@ body #root .App .view {
       background-color: $facebook-blue;
     }
     .wheel-google {
-      stroke: $google-red;
+      stroke: $youtube-red;
     }
     .text-google {
-      background-color: $google-red;
+      background-color: $youtube-red;
     }
     .wheel-spotify {
       stroke: $spotify-green;
