--- a/src/scss/_partials/_base.scss
+++ b/src/scss/_partials/_base.scss
@@ -17,19 +17,23 @@
     }
 
     .icon-facebook {
-      background-color: #3b5999;
+      background-color: $facebook-blue;
     }
 
     .icon-twitter {
-      background-color: #55acee;
+      background-color: $twitter-blue;
     }
 
     .icon-google {
-      background-color: #dd4b39;
+      background-color: $google-red;
+    }
+
+    .icon-youtube {
+      background-color: $youtube-red;
     }
 
     .icon-spotify {
-      background-color: #84bd00;
+      background-color: $spotify-green;
     }
   }
 }
