QS-1019: Make all navbar links wider to make them easier to click

--- a/src/scss/_partials/_navbar.scss
+++ b/src/scss/_partials/_navbar.scss
@@ -20,9 +20,13 @@
 			width: 100%;
 		}
 		.col-30 {
+			cursor: pointer;
+			height: 50px;
 			width: 25%;
 		}
 		.col-40 {
+			cursor: pointer;
+			height: 50px;
 			width: 40%;
 		}
 		.center {
