QS-1017: Replace bell icon with left arrow and make clickable zone wider

--- a/src/scss/_partials/_navbar.scss
+++ b/src/scss/_partials/_navbar.scss
@@ -57,8 +57,14 @@
 			}
 		}
 
-		.open-panel .icon-menu {
-			font-size: 25px;
+		.open-panel {
+			display: block;
+			height: 50px;
+			width: 100%;
+
+			.icon-menu {
+				font-size: 25px;
+			}
 		}
 
 		.icon-circle {
