--- a/src/scss/pages/login.scss
+++ b/src/scss/pages/login.scss
@@ -8,9 +8,19 @@ body #root .App .view .page #page-content.login-content {
   .button {
     margin-bottom: 10px;
   }
-  .register-text {
-    margin-bottom: 10px;
+  .register-text-block {
+    height: 50px;
     text-align: center;
+    .register-text {
+      cursor: pointer;
+      display: inline-block;
+      margin: 0 5px 10px;
+      width: 35%;
+
+      a {
+        font-weight: bold;
+      }
+    }
   }
 }
 
