QS-1020: Add vertical-alignment, needed for spanish texts

--- a/src/scss/pages/home.scss
+++ b/src/scss/pages/home.scss
@@ -95,6 +95,7 @@ body #root .App .view.home-view {
         cursor: pointer;
         display: inline-block;
         margin: 0 5px 10px;
+        vertical-align: middle;
         width: 35%;
 
         a {
