--- a/src/scss/pages/login.scss
+++ b/src/scss/pages/login.scss
@@ -15,6 +15,7 @@ body #root .App .view .page #page-content.login-content {
       cursor: pointer;
       display: inline-block;
       margin: 0 5px 10px;
+      vertical-align: middle;
       width: 35%;
 
       a {
