--- a/src/scss/_partials/_profile-avatars-connection.scss
+++ b/src/scss/_partials/_profile-avatars-connection.scss
@@ -26,7 +26,7 @@
       border-radius: 50%;
       -moz-border-radius: 50%;
       -webkit-border-radius: 50%;
-      height: auto;
+      height: 28px;
       margin: 1px;
       width: 28px;
     }
