QS-1006: Fix messages toolbar

--- a/src/scss/_partials/_messages-toolbar.scss
+++ b/src/scss/_partials/_messages-toolbar.scss
@@ -1,4 +1,4 @@
-.toolbar.messagebar {
+#messages-toolbar .toolbar.messagebar {
 	border-top: 1px solid $light-gray;
 	.toolbar-inner {
 		background: #fff;
