--- a/src/scss/_partials/_toolbar.scss
+++ b/src/scss/_partials/_toolbar.scss
@@ -1,4 +1,4 @@
-#bottom-toolbar.toolbar {
+#bottom-toolbar.toolbar, #messages-toolbar.toolbar, #messages-toolbar .toolbar {
 	background: none;
 	position: fixed !important;
 	padding: 30px 0;
