QS-1049: Add gallery page

--- a/src/scss/_partials/_fonts.scss
+++ b/src/scss/_partials/_fonts.scss
@@ -193,6 +193,7 @@ $nekuno-logo-font: 'klinic_slabmedium';
 }
 .icon-uploadthin:before {
 	content: "\e924";
+	font-size: 1.7em;
 }
 .icon-upload-cload-image:before {
 	content: "\e925";
