--- a/src/scss/_partials/_navbar.scss
+++ b/src/scss/_partials/_navbar.scss
@@ -9,7 +9,6 @@
 	}
 }
 
-
 .navbar, .subnavbar, #bottom-toolbar.toolbar, #messages-toolbar.toolbar {
 	background-color: $dark-purple;
 	color: #fff;
@@ -77,7 +76,17 @@
 		.navbar-link-text {
 			font-weight: bold;
 		}
+
+		&.two-right-icons-navbar {
+			.col-30 {
+				width: 35%;
+			}
+			.col-40 {
+				width: 20%;
+			}
+		}
 	}
+
 	&::after {
 		content: none;
 	}
