--- a/src/scss/pages/gallery.scss
+++ b/src/scss/pages/gallery.scss
@@ -1,5 +1,3 @@
-@import '../_partials/colors';
-
 body #root .App .view .page.gallery-page {
   #page-content {
     text-align: center;
@@ -8,6 +6,7 @@ body #root .App .view .page.gallery-page {
       border-radius: 2px;
       -moz-border-radius: 2px;
       -webkit-border-radius: 2px;
+      cursor: pointer;
       display: inline-block;
       height: 94px;
       margin-right: 5px;
