--- a/src/scss/_partials/_fonts.scss
+++ b/src/scss/_partials/_fonts.scss
@@ -115,6 +115,7 @@ $nekuno-logo-font: 'klinic_slabmedium';
 }
 .icon-image:before {
 	content: "\e90a";
+	font-size: 2.7em;
 }
 .icon-instagram:before {
 	content: "\e90b";
