Link profile picture in ChatMessagesPage to other profile

--- a/src/scss/_partials/_notifications.scss
+++ b/src/scss/_partials/_notifications.scss
@@ -1,6 +1,8 @@
 .notification {
 	padding: 10px 5% 5px 5%;
-
+	.notification-picture {
+		cursor: pointer;
+	}
 	.notification-picture, .notification-picture-right {
 		display: inline-block;
 		margin-right: 5%;
