QS-1052: Undo verbose and add login with social network text

--- a/src/scss/layout.scss
+++ b/src/scss/layout.scss
@@ -125,6 +125,10 @@ body {
 							font-size: 0.823529412em;
 							padding-left: 0;
 						}
+
+						.center {
+							text-align: center;
+						}
 					}
 				}
 
