--- a/src/scss/pages/thread.scss
+++ b/src/scss/pages/thread.scss
@@ -119,5 +119,9 @@ body #root .App .view .page.threads-page  {
         }
       }
     }
+
+    .thread-disabled {
+      box-shadow: inset 0 0 0 1000px rgba(100,100,100,0.5);
+    }
   }
 }
