--- a/src/scss/pages/answer-question.scss
+++ b/src/scss/pages/answer-question.scss
@@ -114,6 +114,30 @@ body #root .App .view .page {
           }
         }
       }
+
+      .list-block {
+        ul.checkbox-genders-list {
+          display: inline-table;
+          padding: 0 2.5%;
+          width: 45%;
+
+          li {
+            .label-checkbox {
+              .item-inner {
+                .item-title {
+                  width: 80%;
+                }
+              }
+            }
+            &::after {
+              content: none;
+            }
+          }
+          .active-state {
+            background-color: transparent;
+          }
+        }
+      }
     }
   }
 }
