QS-1056: Add translations

--- a/src/scss/pages/answer-question.scss
+++ b/src/scss/pages/answer-question.scss
@@ -1,7 +1,7 @@
 @import '../_partials/colors';
 
 body #root .App .view .page {
-  .answer-question-page {
+  &.answer-question-page {
     height: 100%;
   }
   #page-content {
