QS-1056: Change register page to allow only Facebook registration

--- a/src/scss/layout.scss
+++ b/src/scss/layout.scss
@@ -31,6 +31,7 @@
 @import '_partials/notifications';
 @import '_partials/daily-messages';
 @import '_partials/social-wheels';
+@import '_partials/facebook-register-button';
 @import '_partials/questions_banner';
 @import '_partials/guest-banner';
 @import '_partials/empty-message';
