QS-1056: Small fixes

--- a/src/scss/pages/answer-question.scss
+++ b/src/scss/pages/answer-question.scss
@@ -137,6 +137,11 @@ body #root .App .view .page {
             background-color: transparent;
           }
         }
+        .date-content {
+          input {
+            text-align: center;
+          }
+        }
       }
     }
   }
