QS-1056: Improve FB register button

--- a/src/scss/_partials/_colors.scss
+++ b/src/scss/_partials/_colors.scss
@@ -18,6 +18,7 @@ $flesh-colored: #d96484;
 $yellow: #adb32f;
 $orange-link: #dea72f;
 $facebook-blue: #3b5998;
+$facebook-blue-light: rgba(139,157,195, 0.5);
 $twitter-blue: #55acee;
 $spotify-green: #82b919;
 $google-red: #d34836;
