--- a/src/scss/pages/register.scss
+++ b/src/scss/pages/register.scss
@@ -1,6 +1,15 @@
 @import '../_partials/colors';
 
 body #root .App .view .page {
+  .gradient-transparency {
+    background-image: linear-gradient(180deg, black 0%, rgba(0, 0, 0, 0.7) 50%, rgba(0, 0, 0, 0.5) 100%);
+    height: 100%;
+    opacity: 0.9;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    z-index: -1;
+  }
   #page-content.register-content {
     margin: 100px auto 0 auto;
   }
