QS-1081: Remove swiper from own interests page and fix youtube video width

--- a/src/scss/_partials/_card.scss
+++ b/src/scss/_partials/_card.scss
@@ -78,7 +78,10 @@
 
 		.card-content-inner {
 			padding: 0;
-			
+
+			.discover-video {
+				width: 100%;
+			}
 			.image img {
 				width: 100%;
 				vertical-align: middle;
