QS-1078: Add fixed button for importing album photos, use gallery thumbnails and show importing album message

--- a/src/scss/pages/gallery.scss
+++ b/src/scss/pages/gallery.scss
@@ -69,6 +69,10 @@ body #root .App .view .page.gallery-page {
           white-space: nowrap;
           overflow: hidden;
           text-overflow: ellipsis;
+
+          &.with-background {
+            background: $light-gray-translucent;
+          }
         }
       }
 
