--- a/src/scss/layout.scss
+++ b/src/scss/layout.scss
@@ -104,6 +104,13 @@ body {
 					cursor: pointer;
 				}
 
+				.fixed-button {
+					bottom: 20px;
+					left: 5%;
+					position: fixed;
+					width: 85%;
+				}
+
 				.page {
 					background: $dark-purple;
 					height: auto;
