--- a/src/scss/layout.scss
+++ b/src/scss/layout.scss
@@ -35,6 +35,7 @@
 @import '_partials/questions_banner';
 @import '_partials/guest-banner';
 @import '_partials/empty-message';
+@import '_partials/processes-progress';
 
 * {
 	-webkit-tap-highlight-color: rgba(0, 0, 0, 0); /* make transparent link selection, adjust last value opacity 0 to 1.0 */
