QS-1100: Fix showing invitations

--- a/src/scss/pages/invitations.scss
+++ b/src/scss/pages/invitations.scss
@@ -14,6 +14,10 @@ body #root .App .view .page.invitations-page  {
         margin: 10px 0;
         text-align: center;
       }
+      .invitation-consumed {
+        margin: 10px 0;
+        text-align: center;
+      }
     }
   }
 }
